contabo-box/deployment/files/deployment.yml
Kubernetes apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: default
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: mucsi96/ansible-demos-client:4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 80
