contabo-box/deployment/files/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: default
spec:
  selector:
    app: client
  type: NodePort
  ports:
  - port: 8080
    targetPort: http
