contabo-box/deployment/files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: http
    targetPort: http
  selector:
    app: client
