contabo-box/deployment/files/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: client
  namespace: default
spec:
  entryPoints: 
    - web
  routes:
  - kind: Rule
    match: PathPrefix(`/`)
    services:
    - kind: Service
      name: client
      port: http
